# flecs-luajit

./: .gitignore  CMakeLists.txt  README.md
distr/: ecs.lua
libs/flecs/: flecs.h
src/: ecs.lua  main.c  tests.lua
utils/: preprocess.bat  preprocess.sh
